[project]
name = "ai-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { email = "dvd.hnrchs@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.11.0",
    "pytest>=8.4.1",
]

[project.scripts]
ai-agents = "ai_agents:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
